removed border on collapsed, fixed titles to flex display

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -73,10 +73,11 @@
 
 		&.major {
 			border-bottom: solid _size(border-width) _palette(border);
-			width: -moz-max-content;
-			width: -webkit-max-content;
-			width: -ms-max-content;
-			width: max-content;
+			// width: -moz-max-content;
+			// width: -webkit-max-content;
+			// width: -ms-max-content;
+      // width: max-content;
+      width:auto;
 			padding-bottom: 0.5rem;
 			margin: 0 0 (_size(element-margin) * 1) 0;
 		}
