--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -24,7 +24,7 @@
 				'opacity #{_duration(article)} ease-in-out',
 				'transform #{_duration(article)} ease-in-out'
 			));
-			@include padding(2.5rem, 2.5rem, (2rem, 0, 1rem, 0));
+			@include padding(2.5rem, 2.5rem, (1rem, 0, 1rem, 0));
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
